[gd_scene load_steps=3 format=3 uid="uid://b0y1q1vbukusb"]

[ext_resource type="LabelSettings" uid="uid://dy5tppre4g776" path="res://Scenes/Hud/24_hud_wite_label.tres" id="1_caylu"]
[ext_resource type="Script" path="res://Scenes/Hud/hud.gd" id="1_tc0i6"]

[node name="HUD" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_tc0i6")

[node name="MC" type="MarginContainer" parent="."]
layout_mode = 1
offset_right = 173.0
offset_bottom = 74.0
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VC" type="VBoxContainer" parent="MC"]
layout_mode = 2

[node name="AttemptsHC" type="HBoxContainer" parent="MC/VC"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="AttemptsLabel" type="Label" parent="MC/VC/AttemptsHC"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
text = "Attempts - "
label_settings = ExtResource("1_caylu")

[node name="AttemptsNumber" type="Label" parent="MC/VC/AttemptsHC"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
text = "0"
label_settings = ExtResource("1_caylu")

[node name="ScoreHC" type="HBoxContainer" parent="MC/VC"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="ScoreLabel" type="Label" parent="MC/VC/ScoreHC"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
text = "Score - "
label_settings = ExtResource("1_caylu")

[node name="ScoreNumber" type="Label" parent="MC/VC/ScoreHC"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
text = "0"
label_settings = ExtResource("1_caylu")
